<?xml version="1.0" encoding="UTF-8"?>
<package format="3">
  <name>ovir_3d</name>
  <version>0.1.0</version>
  <description>The ovir_3d package</description>
  <maintainer email="SBGRP-git@g.softbank.co.jp">SoftBank corp.</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <export/>
</package>
